# k8s-device-plugin-rs

./: .editorconfig  Cargo.toml  README.md
.devcontainer/: Dockerfile  on-create.sh
.github/workflows/: ci.yml  install-extra-dependencies.sh  release.yml
device-plugin/: Cargo.toml
device-plugin/proto/: api.proto
device-plugin/src/: error.rs  lib.rs
sample-device/: Cargo.toml
sample-device/examples/: sample-device-client.rs
sample-device/src/: lib.rs  main.rs
