[package]
name = "device-plugin"
keywords = ["kubernetes"]
# https://crates.io/category_slugs
categories = ["hardware-support"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies]
tonic-build = "0.14.2"

[dependencies]
hyper-util = "0.1.9"
log = "0.4.22"
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["macros", "signal"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"
tower = "0.5.1"
